changed hotel json

--- a/qy/views/hotel.html
+++ b/qy/views/hotel.html
@@ -14,7 +14,7 @@
     <header id="header" class="">
     </header>
     <header id="hf-header" class="">
-        <img src="../images/Hotel/head_bg.jpg" alt="">
+        <img src="../images/hotel/head_bg.jpg" alt="">
         <div class="hf-header-shou">
             <p class="hf-header-p1">全球超过108万家酒店任你选择</p>
             <p class="hf-header-p2">来自千万穷游er的500万条真实评论</p>
