--- a/qy/views/travelLife.html
+++ b/qy/views/travelLife.html
@@ -62,8 +62,8 @@
                     <a href="#"><img src="../images/travelLift/f3_1.jpg" alt=""></a>
                 </div>
                 <div>
-                    <a href="#"><img src="../images/travelLift/f3_2.JPG" alt=""></a>
-                    <a href="#"><img src="../images/travelLift/f3_3.JPG" alt=""></a>
+                    <a href="#"><img src="../images/travelLift/f3_2.jpg" alt=""></a>
+                    <a href="#"><img src="../images/travelLift/f3_3.jpg" alt=""></a>
                 </div>
                 <div class=" hf clear">
                     <a class="imgf13" href="#"><img src="../images/travelLift/f3_4.jpg" alt=""></a>
