--- a/qy/views/destination.html
+++ b/qy/views/destination.html
@@ -48,9 +48,9 @@
     		</div>
     	</div>
     	<div class="des-main">
-    		<div class="ad-box">
+    		<!-- <div class="ad-box">
     			<img src="../images/des-adimg.jpg" alt="">
-    		</div>
+    		</div> -->
     		<div class="exploreWorld clear">
     			<h2 class="floor-title">探索精彩世界</h2>
     			<ul class="play-list clear">
