--- a/idCard/css/index.css
+++ b/idCard/css/index.css
@@ -2,10 +2,10 @@ h3{
 	font-size: 24px;
 }
 body{
-	text-align: center;
+	/*text-align: center;*/
 }
 body>div{
-	text-align: center;
+	/*text-align: center;*/
 	float: left;
 	border:1px solid black;
 	margin-left:50px;
@@ -19,6 +19,29 @@ body>div{
 #getIdCard{
 	width: 600px;
 }
+#getIdCard h3{
+	width: 120px;
+	display: block;
+	margin: 0 auto;
+}
+#getIdCard div{
+	line-height: 36px;
+}
+#getIdCard span{
+	display: inline-block;
+	width: 100px;
+}
+#getIdCard select{
+	width: 200px;
+}
+/*#result {
+	border-top: 1px solid black;
+	min-height: 48px;
+}*/
+/*#getIdCard ._date span{
+	display: inline-block;
+	width: 100px;
+}*/
 .showResult{
 	margin-top: 10px;
 }
@@ -28,5 +51,12 @@ body>div{
 .errorTip{
 	height: 24px;
 	color: red;
-
+}
+.subBtn button{
+	display: block;
+	width: 64px;
+	height: 32px;
+	line-height: 20px;
+	border-radius: 8px;
+	margin: 10px auto;
 }
